# data_distribution_exercise

./: CMakeLists.txt  Untitled Diagram.drawio
include/: circle.hpp  color.hpp  coordinates.hpp  publisher.hpp  shape.hpp  shape_type.hpp  square.hpp  subscriber.hpp
src/: circle.cpp  coordinates.cpp  publisher.cpp  publisher_main.cpp  shape.cpp  square.cpp  subscriber.cpp  subscriber_main.cpp
